# selfMCP

./: .gitignore  .replit  README.md  db.py  embeddings.py  executor.py  pyproject.toml  requirements.txt  selfmcp_sdk.py  server.py  skills.py  test_selfmcp.py
