[project]
name = "selfmcp"
version = "0.1.0"
description = "A self-extending MCP server — skill registry, search, and runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "selfMCP" }]
dependencies = [
    "mcp>=1.2.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
selfmcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "skills", "db", "embeddings", "executor"]
